# cobblemon-agent

./: .env.example  .gitignore  docker-compose.yml  proxmox-setup.sh
backend/: Dockerfile  db.py  main.py  orchestrator.py  pyproject.toml
backend/data/: abilities.txt  berries.txt  breeding.txt  competitive.txt  evolutions.txt  items.txt  mega_evolutions.txt  moves.txt  spawns.txt  stats.txt  tms.txt  types.txt
backend/tools/: __init__.py  ability_tool.py  berry_tool.py  breeding_tool.py  competitive_tool.py  evolution_tool.py  file_tool.py  item_tool.py  mega_tool.py  move_tool.py  pokeapi_tool.py  spawn_tool.py  stats_tool.py  summarize_tool.py  tm_tool.py  type_tool.py
frontend/: index.html  nginx.conf  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AccessGate.tsx  ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
