[project]
name = "cobblemon-agent"
version = "0.1.0"
description = "DeepAgent for Cobblemon - AI assistant with specialized sub-agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langchain>=0.3",
    "langchain-google-genai>=2.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "langchain-deepseek>=1.0.1",
]
